--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
           <p>$100</p>
           <button class="like-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z" />
+              <path d="m7.5 14.8-6.2-6.2c-1.7-1.7-1.7-4.5 0-6.2.8-.8 1.9-1.3 3.1-1.3 1.2 0 2.2.5 3.1 1.3v.1c.8-.8 1.9-1.3 3.1-1.3s2.2.5 3.1 1.3c1.7 1.7 1.7 4.5 0 6.2zm-3.1-11.6c-.6 0-1.2.2-1.6.7-.9.9-.9 2.4 0 3.3l4.7 4.8 4.7-4.8c.9-.9.9-2.4 0-3.3-.8-.9-2.4-.9-3.2 0l-1.5 1.5-1.5-1.5c-.4-.5-1-.7-1.6-.7z"></path>
             </svg>
           </button>
         </div>
@@ -27,7 +27,7 @@
           <p>$150</p>
           <button class="like-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z" />
+              <path d="m7.5 14.8-6.2-6.2c-1.7-1.7-1.7-4.5 0-6.2.8-.8 1.9-1.3 3.1-1.3 1.2 0 2.2.5 3.1 1.3v.1c.8-.8 1.9-1.3 3.1-1.3s2.2.5 3.1 1.3c1.7 1.7 1.7 4.5 0 6.2zm-3.1-11.6c-.6 0-1.2.2-1.6.7-.9.9-.9 2.4 0 3.3l4.7 4.8 4.7-4.8c.9-.9.9-2.4 0-3.3-.8-.9-2.4-.9-3.2 0l-1.5 1.5-1.5-1.5c-.4-.5-1-.7-1.6-.7z"></path>
             </svg>
           </button>
         </div>
@@ -38,7 +38,7 @@
           <p>$100</p>
           <button class="like-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z" />
+              <path d="m7.5 14.8-6.2-6.2c-1.7-1.7-1.7-4.5 0-6.2.8-.8 1.9-1.3 3.1-1.3 1.2 0 2.2.5 3.1 1.3v.1c.8-.8 1.9-1.3 3.1-1.3s2.2.5 3.1 1.3c1.7 1.7 1.7 4.5 0 6.2zm-3.1-11.6c-.6 0-1.2.2-1.6.7-.9.9-.9 2.4 0 3.3l4.7 4.8 4.7-4.8c.9-.9.9-2.4 0-3.3-.8-.9-2.4-.9-3.2 0l-1.5 1.5-1.5-1.5c-.4-.5-1-.7-1.6-.7z"></path>
             </svg>
           </button>
         </div>
@@ -49,7 +49,7 @@
           <p>$150</p>
           <button class="like-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z" />
+              <path d="m7.5 14.8-6.2-6.2c-1.7-1.7-1.7-4.5 0-6.2.8-.8 1.9-1.3 3.1-1.3 1.2 0 2.2.5 3.1 1.3v.1c.8-.8 1.9-1.3 3.1-1.3s2.2.5 3.1 1.3c1.7 1.7 1.7 4.5 0 6.2zm-3.1-11.6c-.6 0-1.2.2-1.6.7-.9.9-.9 2.4 0 3.3l4.7 4.8 4.7-4.8c.9-.9.9-2.4 0-3.3-.8-.9-2.4-.9-3.2 0l-1.5 1.5-1.5-1.5c-.4-.5-1-.7-1.6-.7z"></path>
             </svg>
           </button>
         </div>
@@ -60,7 +60,7 @@
           <p>$100</p>
           <button class="like-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z" />
+              <path d="m7.5 14.8-6.2-6.2c-1.7-1.7-1.7-4.5 0-6.2.8-.8 1.9-1.3 3.1-1.3 1.2 0 2.2.5 3.1 1.3v.1c.8-.8 1.9-1.3 3.1-1.3s2.2.5 3.1 1.3c1.7 1.7 1.7 4.5 0 6.2zm-3.1-11.6c-.6 0-1.2.2-1.6.7-.9.9-.9 2.4 0 3.3l4.7 4.8 4.7-4.8c.9-.9.9-2.4 0-3.3-.8-.9-2.4-.9-3.2 0l-1.5 1.5-1.5-1.5c-.4-.5-1-.7-1.6-.7z"></path>
             </svg>
           </button>
         </div>
@@ -71,7 +71,7 @@
           <p>$150</p>
           <button class="like-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z" />
+              <path d="m7.5 14.8-6.2-6.2c-1.7-1.7-1.7-4.5 0-6.2.8-.8 1.9-1.3 3.1-1.3 1.2 0 2.2.5 3.1 1.3v.1c.8-.8 1.9-1.3 3.1-1.3s2.2.5 3.1 1.3c1.7 1.7 1.7 4.5 0 6.2zm-3.1-11.6c-.6 0-1.2.2-1.6.7-.9.9-.9 2.4 0 3.3l4.7 4.8 4.7-4.8c.9-.9.9-2.4 0-3.3-.8-.9-2.4-.9-3.2 0l-1.5 1.5-1.5-1.5c-.4-.5-1-.7-1.6-.7z"></path>
             </svg>
           </button>
         </div>
@@ -82,7 +82,7 @@
           <p>$100</p>
           <button class="like-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z" />
+              <path d="m7.5 14.8-6.2-6.2c-1.7-1.7-1.7-4.5 0-6.2.8-.8 1.9-1.3 3.1-1.3 1.2 0 2.2.5 3.1 1.3v.1c.8-.8 1.9-1.3 3.1-1.3s2.2.5 3.1 1.3c1.7 1.7 1.7 4.5 0 6.2zm-3.1-11.6c-.6 0-1.2.2-1.6.7-.9.9-.9 2.4 0 3.3l4.7 4.8 4.7-4.8c.9-.9.9-2.4 0-3.3-.8-.9-2.4-.9-3.2 0l-1.5 1.5-1.5-1.5c-.4-.5-1-.7-1.6-.7z"></path>
             </svg>
           </button>
         </div>
@@ -93,7 +93,7 @@
           <p>$150</p>
           <button class="like-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-              <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z" />
+              <path d="m7.5 14.8-6.2-6.2c-1.7-1.7-1.7-4.5 0-6.2.8-.8 1.9-1.3 3.1-1.3 1.2 0 2.2.5 3.1 1.3v.1c.8-.8 1.9-1.3 3.1-1.3s2.2.5 3.1 1.3c1.7 1.7 1.7 4.5 0 6.2zm-3.1-11.6c-.6 0-1.2.2-1.6.7-.9.9-.9 2.4 0 3.3l4.7 4.8 4.7-4.8c.9-.9.9-2.4 0-3.3-.8-.9-2.4-.9-3.2 0l-1.5 1.5-1.5-1.5c-.4-.5-1-.7-1.6-.7z"></path>
             </svg>
           </button>
         </div>
