--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
             </li>
             <li class="nav-item pe-2">
               <a class="nav-link text-light" href="fav.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                  <path d="M8 14s-6-4-6-8a4 4 0 1 1 8 0c0 2.344-1.437 4-4 4zM4 2a5 5 0 1 0 8 0c0 1.833-1.125 3.625-3 3.625S4 3.833 4 2z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                  <path d="m7.5 14.8-6.2-6.2c-1.7-1.7-1.7-4.5 0-6.2.8-.8 1.9-1.3 3.1-1.3 1.2 0 2.2.5 3.1 1.3v.1c.8-.8 1.9-1.3 3.1-1.3s2.2.5 3.1 1.3c1.7 1.7 1.7 4.5 0 6.2zm-3.1-11.6c-.6 0-1.2.2-1.6.7-.9.9-.9 2.4 0 3.3l4.7 4.8 4.7-4.8c.9-.9.9-2.4 0-3.3-.8-.9-2.4-.9-3.2 0l-1.5 1.5-1.5-1.5c-.4-.5-1-.7-1.6-.7z"></path>
                 </svg> Favourite
               </a>
             </li>
             <li class="nav-item pe-2">
               <a class="nav-link text-light" href="#store">
-                <svg viewBox="0 0 15 15" fill="currentColor" width="25" height="25"><path d="M7.5,0.5c-3,0-5.4,2.4-5.4,5.4c0,1.1,0.7,2.6,1.7,4c1.7,2.3,3.7,4.6,3.7,4.6s2-2.4,3.7-4.6  c0.9-1.4,1.7-2.9,1.7-4C12.9,2.9,10.5,0.5,7.5,0.5z M7.5,8.4C6.1,8.4,5,7.2,5,5.9c0-1.4,1.1-2.5,2.5-2.5S10,4.5,10,5.9  S8.9,8.4,7.5,8.4z"></path></svg>
+                <svg viewBox="0 0 16 16" fill="currentColor" width="16" height="16">
+                  <path d="M7.5,0.5c-3,0-5.4,2.4-5.4,5.4c0,1.1,0.7,2.6,1.7,4c1.7,2.3,3.7,4.6,3.7,4.6s2-2.4,3.7-4.6  c0.9-1.4,1.7-2.9,1.7-4C12.9,2.9,10.5,0.5,7.5,0.5z M7.5,8.4C6.1,8.4,5,7.2,5,5.9c0-1.4,1.1-2.5,2.5-2.5S10,4.5,10,5.9  S8.9,8.4,7.5,8.4z"></path>
+                </svg>
                 Store Locator
               </a>
             </li>
@@ -59,7 +61,7 @@
   <!-- Collections Section -->
   <section id="collections" class="animateIt mt-2 px-5 text-light">
     <div class="">
-      <h2 class="highlightBox main text-center pb-3">Our Collections</h2>
+      <h2 class="highlightBox main text-center pb-3">Our New Collections</h2>
       <div class="row">
         <!-- Collection 1: Submariner -->
         <div class="col-md-4">
@@ -86,7 +88,7 @@
         <!-- Collection 3: Daytona -->
         <div class="col-md-4">
           <div class="card mb-4">
-            <img src="r7.png" class="card-img-top" alt="Rolex Daytona">
+            <img src="daytona.png" class="card-img-top" alt="Rolex Daytona">
             <div class="card-body">
               <h4 class="card-title text-center text-dark">Daytona</h4>
               <p class="card-text text-center text-dark">The ultimate racing chronograph, designed for speed and precision.</p>
