Update all files

--- a/fav.html
+++ b/fav.html
@@ -10,7 +10,7 @@
 <body class="bodypart">
   <h2 class="text-center text-light">Favorite Watches Section</h2>
   <div class="gallery">
-    <div class="watch">
+    <div class="favwatch">
       <section id="favorites">
         <div class="favorites"></div>
       </section>
