--- a/fav.html
+++ b/fav.html
@@ -8,7 +8,19 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
 <body class="bodypart">
-  <h2 class="text-center text-light">Favorite Watches Section</h2>
+  <div class="row premium">
+    <div class="col-3 col-md-3">
+      <img src="logo2.png" alt="Rolex Logo" class="center-logo ps-3" width="100px">
+    </div>
+    <div class="col-6 col-md-6">
+      <h2 class="text-center text-light">Favourite Section</h2>
+    </div>
+    <div class="col-3 col-md-3 text-center favbutton">
+      <a class="nav-link text-light pt-3" href="index.html">
+        Home
+      </a>
+    </div>
+  </div>
   <div class="gallery">
     <div class="favwatch">
       <section id="favorites">
